force-app/main/default/objects/Sales_GetFeedback_Surveys__c/Sales_GetFeedback_Surveys__c.object-meta.xml
<CustomObject>
    <label>Sales GetFeedback Survey</label>
    <nameField>
        <label>Sales GetFeedback Surveys Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales GetFeedback Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>