force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Ability_to_Answer_Tax_and_Accounting_s__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_Answer_Tax_and_Accounting_s__c</fullName>
    <description>Name of Survey: Tax Consultation Survey (6 Questions)
Question Number: 4
Question Text: Rate your Small Business Tax Specialist on the following:
Sub-Question: Ability to Answer Tax and Accounting Questions</description>
    <label>Ability to Answer Tax and Accounting  ?s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>