force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Accounting_Advice__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Advice__c</fullName>
    <label>Accounting Advice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>