force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Answering_Questions__c.field-meta.xml
<CustomField>
    <fullName>Answering_Questions__c</fullName>
    <description>Name of Survey: Thank you for attending your consultation
Question Number: 2
Question Text: Please rate today’s consultation based on the following qualities:
Sub-Question: How well did they answer all your tax and accounting related questions?</description>
    <label>Answering Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>