force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Any_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Any_Additional_Comments__c</fullName>
    <description>Name of Survey: Tax Consultation Survey (6 Questions)
Question Number: 6
Question Text: Do you have any additional comments?
Sub-Question: N/A</description>
    <label>Any Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>