force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Business_and_Industry_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Business_and_Industry_Knowledge__c</fullName>
    <description>Name of Survey: Tax Consultation Survey (6 Questions)
Question Number: 4
Question Text: Rate your Small Business Tax Specialist on the following:
Sub-Question: Business and Industry Knowledge</description>
    <label>Business and Industry Knowledge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>