force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Call_On_time__c.field-meta.xml
<CustomField>
    <fullName>Call_On_time__c</fullName>
    <description>Name of Survey: Thank you for attending your consultation
Question Number: 3
Question Text: Did they call on-time?

Name of Survey: Tax Consultation Survey (6 Questions)
Question Number: 2
Question Text: Did your Small Business Tax Specialist call you on time?
Sub-Question: N/A</description>
    <label>Call On-time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>