force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Call_On_time_Comment__c.field-meta.xml
<CustomField>
    <fullName>Call_On_time_Comment__c</fullName>
    <description>Name of Survey: Tax Consultation Survey (6 Questions)
Question Number: 2
Question Text: Did your Small Business Tax Specialist call you on time?
Sub-Question: Please feel free to elaborate.</description>
    <label>Call On-time Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>