force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Clear_Communication_Regarding_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Clear_Communication_Regarding_Pricing__c</fullName>
    <description>Name of Survey: Tax Consultation Survey (6 Questions)
Question Number: 4
Question Text: Rate your Small Business Tax Specialist on the following:
Sub-Question: Clear Communication Regarding Pricing</description>
    <label>Clear Communication Regarding Pricing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>