force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Consultation_Appointment_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Appointment_Satisfaction__c</fullName>
    <description>Name of Survey: Tax Consultation Survey (1 Question)
Question Number: 1
Question Text: How satisfied were you with the Small Business Tax Specialist Appointment?
Sub-Question: N/A</description>
    <label>Consultation Appointment Satisfaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>