force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Consultation_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Feedback__c</fullName>
    <description>Name of Survey: Thank you for attending your consultation
Question Number: 5
Question Text: What is one recommendation on how we can improve the consultation to make you more likely to purchase our service in the future?
Sub-Question: N/A</description>
    <label>Consultation Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>