force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Courteousness_of_the_advisor__c.field-meta.xml
<CustomField>
    <fullName>Courteousness_of_the_advisor__c</fullName>
    <description>Name of Survey: Thank you for attending your consultation
Question Number: 2
Question Text: Please rate today’s consultation based on the following qualities:
Sub-Question: Courteousness of the advisor?</description>
    <label>Courteousness of the advisor?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>