force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Sales GetFeedback Surveys</relationshipLabel>
    <relationshipName>Sales_GetFeedback_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>