force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <formula>IF( text(Account__r.Lead_Source__c) = &quot;&quot;, text(Lead__r.LeadSource), text(Account__r.Lead_Source__c))</formula>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>