force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Link_to_Response__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Response__c</fullName>
    <description>a link to the response in GetFeedback</description>
    <label>Link to Response</label>
    <type>Url</type>
</CustomField>