force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Material_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Material_Presentation__c</fullName>
    <label>Material Presentation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>