force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Necessary_Services__c.field-meta.xml
<CustomField>
    <fullName>Necessary_Services__c</fullName>
    <description>Name of Survey: Tax Consultation Survey (6 Questions)
Question Number: 3
Question Text: Did your Small Business Tax Specialist identify the necessary services for your business?
Sub-Question: N/A</description>
    <label>Necessary Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>