force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Necessary_Services_Comment__c.field-meta.xml
<CustomField>
    <fullName>Necessary_Services_Comment__c</fullName>
    <description>Name of Survey: Tax Consultation Survey (6 Questions)
Question Number: 3
Question Text: Did your Small Business Tax Specialist identify the necessary services for your business?
Sub-Question: Please feel free to elaborate</description>
    <label>Necessary Services Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>