force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Offered_Solutions_for_business_needs__c.field-meta.xml
<CustomField>
    <fullName>Offered_Solutions_for_business_needs__c</fullName>
    <description>Name of Survey: Tax Consultation Survey (6 Questions)
Question Number: 4
Question Text: Rate your Small Business Tax Specialist on the following:
Sub-Question: Offered solutions to your specific business needs</description>
    <label>Offered Solutions for business needs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>