force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Overall_Tax_Consultation_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Overall_Tax_Consultation_Satisfaction__c</fullName>
    <description>Name of Survey: Tax Consultation Survey (6 Questions)
Question Number: 1
Question Text: How satisfied were you with your overall Tax Consultation experience?
Sub-Question: N/A</description>
    <label>Overall Tax Consultation Satisfaction</label>
    <length>32</length>
    <type>Text</type>
</CustomField>