force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Passive__c.field-meta.xml
<CustomField>
    <fullName>Passive__c</fullName>
    <formula>IF(AND(  Recommend_Service__c &gt; 6, Recommend_Service__c &lt; 9), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>