force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Pitched_by_account__c.field-meta.xml
<CustomField>
    <fullName>Pitched_by_account__c</fullName>
    <formula>Account__r.Pitched__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pitched by (account)</label>
    <type>Text</type>
</CustomField>