force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Pitched_by_lead__c.field-meta.xml
<CustomField>
    <fullName>Pitched_by_lead__c</fullName>
    <formula>Lead__r.Pitched__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pitched by (lead)</label>
    <type>Text</type>
</CustomField>