force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Price_Communication__c.field-meta.xml
<CustomField>
    <fullName>Price_Communication__c</fullName>
    <description>Name of Survey: Thank you for attending your consultation
Question Number: 2
Question Text: Please rate today’s consultation based on the following qualities:
Sub-Question: Did they clearly communicate the pricing?</description>
    <label>Price Communication</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>