force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <formula>IF( Account__r.Primary_Contact_First_Name__c = &quot;&quot;, Lead__r.FirstName &amp; &quot; &quot; &amp; Lead__r.LastName, Account__r.Primary_Contact_First_Name__c &amp; &quot; &quot; &amp; Account__r.Primary_Contact_Last_Name__c)</formula>
    <label>Primary Contact</label>
    <type>Text</type>
</CustomField>