force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Email__c</fullName>
    <formula>IF(Lead__r.FirstName =&quot;&quot;,Account__r.Primary_Contact_Email__c, Lead__r.Email)</formula>
    <label>Primary Contact Email</label>
    <type>Text</type>
</CustomField>