force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Promoter__c.field-meta.xml
<CustomField>
    <fullName>Promoter__c</fullName>
    <formula>IF(  Recommend_Service__c &gt; 8, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promoter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>