force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Recommend_Service__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Service__c</fullName>
    <description>Name of Survey: Thank you for attending your consultation
Question Number: 4
Question Text: How likely are you to recommend our service to a friend?
Sub-Question: N/A</description>
    <label>Recommend Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>