force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Recommend_Service_to_small_business__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Service_to_small_business__c</fullName>
    <description>Name of Survey: Tax Consultation Survey (6 Questions)
Question Number: 5
Question Text: How likely are you to recommend 1-800Accountant services to other small businesses?
Sub-Question: N/A</description>
    <label>Recommend Service to small business</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>