force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Rep1__c.field-meta.xml
<CustomField>
    <fullName>Rep1__c</fullName>
    <formula>Sales_Rep__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep1</label>
    <type>Text</type>
</CustomField>