force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <formula>Pitched_by_account__c +  Pitched_by_lead__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep</label>
    <type>Text</type>
</CustomField>