force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Scheduling_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Satisfaction__c</fullName>
    <label>Scheduling Satisfaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>