force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Tax_Strategy_Creativity__c.field-meta.xml
<CustomField>
    <fullName>Tax_Strategy_Creativity__c</fullName>
    <label>Tax Strategy Creativity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>