force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Today_s_Consultation__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Consultation__c</fullName>
    <label>Today&apos;s Consultation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Too Short</fullName>
            </value>
            <value>
                <fullName>Just Right</fullName>
            </value>
            <value>
                <fullName>Too Long</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>