force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Today_s_Consultation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Consultation_Rate__c</fullName>
    <description>Name of Survey: Thank you for attending your consultation
Question Number: 1
Question Text: How would you rate today’s consultation?
Sub-Question: N/A</description>
    <label>Today&apos;s Consultation Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>