force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Today_s_Webinar_Rate__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Webinar_Rate__c</fullName>
    <label>Today&apos;s Webinar Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>