force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/Webinar_Survey__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Survey__c</fullName>
    <label>Webinar Survey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>