force-app/main/default/objects/Sales_GetFeedback_Surveys__c/fields/X1_1_Survey_Name__c.field-meta.xml
<CustomField>
    <fullName>X1_1_Survey_Name__c</fullName>
    <label>1-1 Survey Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>