force-app/main/default/objects/Sales_GetFeedback_Surveys__c/validationRules/Lock_Account_Owner_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Account_Owner_field</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
ISCHANGED(  Account_Owner__c  ), 
NOT(ISBLANK(PRIORVALUE(  Account_Owner__c  ))))</errorConditionFormula>
    <errorMessage>Can&apos;t change Account Owner</errorMessage>
</ValidationRule>