force-app/main/default/objects/Sales_GetFeedback_Surveys__c/validationRules/Lock_Sales_Rep_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Sales_Rep_field</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
ISCHANGED(    Rep1__c ), 
NOT(ISBLANK(PRIORVALUE(    Rep1__c ))))</errorConditionFormula>
    <errorMessage>Can&apos;t change sales rep</errorMessage>
</ValidationRule>