force-app/main/default/objects/Sales_GetFeedback_Surveys__c/listViews/All_Surveys.listView-meta.xml
<ListView>
    <fullName>All_Surveys</fullName>
    <columns>NAME</columns>
    <columns>Recommend_Service__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Rating_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Surveys</label>
</ListView>