force-app/main/default/objects/Sales_GetFeedback_Surveys__c/listViews/My_Surveys.listView-meta.xml
<ListView>
    <fullName>My_Surveys</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Lead__c</columns>
    <columns>Feedback__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Lead_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>My Surveys</label>
    <language>en_US</language>
</ListView>